syntax = "proto3";

message Vector3
{
	double x = 1;
	double y = 2;
	double z = 3;
}

message Condition
{
	uint32 id = 1;
	uint32 progress = 2;
	uint32 status = 3;
}

message Mission
{
	uint32 id = 1;
	uint32 status = 2;
	repeated Condition conditions = 3;
}

message MissionMap
{
	map<uint32, Mission> missions = 1;
	
}

message MissionBeginTime
{
	map<uint32, uint64> mission_begin_time = 1;
}

message CompleteMissionsId
{
	map<uint32, bool> missions = 1;
	map<uint32, bool> can_reward_mission_id = 2;
}